# cerium

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: nightly.yml  publish.yml  rust.yml
scripts/: generate_source_map.py  install-libmagic.sh  install.sh
src/: README.md  lib.rs  main.rs
src/cli/: args.rs  flags.rs  mod.rs
src/display/: classify.rs  factory.rs  grid.rs  list.rs  mod.rs  mode.rs  summary.rs  traversal.rs  tree.rs
src/display/layout/: alignment.rs  column.rs  mod.rs  row.rs  unicode_width.rs  width.rs
src/display/layout/term_grid/: cell.rs  layout.rs  mod.rs  options.rs
src/display/output/: banner.rs  mod.rs  populate.rs  quotes.rs  terminal.rs
src/display/styles/: cli_help.rs  column.rs  element.rs  entry.rs  help.rs  mod.rs  text.rs  value.rs
src/display/theme/: colours.rs  icons.rs  mod.rs
src/fs/: acl.rs  cache.rs  context.rs  dir.rs  glob.rs  hyperlink.rs  metadata.rs  mod.rs  mountpoint.rs  permissions.rs  search.rs  symlink.rs  tree.rs  xattr.rs
src/fs/entry/: directory.rs  file.rs  mod.rs  symlink.rs
src/fs/feature/: checksum.rs  magic.rs  mod.rs
src/output/: banner.rs  mod.rs  populate.rs  quotes.rs
src/output/display/: factory.rs  grid.rs  list.rs  mod.rs  traversal.rs  tree.rs
src/output/formats/: date.rs  format.rs  mod.rs  number.rs  ownership.rs  permissions.rs  size.rs
src/output/layout/: alignment.rs  column.rs  row.rs  unicode_width.rs  width.rs
src/output/styles/: column.rs  entry.rs  text.rs
src/output/theme/: colours.rs  icons.rs
tests/: display_permission_format.rs  display_term_grid.rs  display_theme.rs  display_theme_colour.rs  display_theme_config.rs  display_unicode_width.rs  display_width.rs  fs_dir.rs  fs_entry.rs  fs_glob.rs  fs_hyperlink.rs  fs_permissions.rs  fs_search.rs  fs_symlink.rs  fs_tree.rs
tests/common/: mod.rs
themes/: README.md  catppuccin-mocha.toml  dracula.toml  gruvbox.toml  nord.toml  one-dark.toml  rose-pine.toml  solarized-dark.toml  tokyo-night.toml
themes/matugen/: README.md  cerium.toml
(+16 files in other folders)
